--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "stripe": "^18.3.0"
   }
 }
